<resources>
    <string name="app_name">BepWay</string>
    <string name="start_task_main_button">Start task</string>
    <string name="person_information_main">Informations personnelles</string>
    <string name="textView">TextView</string>
    <string name="listItem">Nos zonings</string>
    <string name="mapItem">Carte</string>
    <string name="openDrawer">Open the drawer</string>
    <string name="closeDrawer">Close the drawer</string>
    <string name="my_header_title">Menu</string>
    <string name="title_activity_maps">Carte</string>
    <string name="settingsItem">Paramètres</string>
    <string name="logOutItem">Se déconnecter</string>
    <string name="researchItem">Rechercher une entreprise</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="title_activity_test_login">TestLoginActivity</string>
    <string name="title_tab_login">Se connecter</string>
    <string name="title_tab_regiser">S\'enregistrer</string>
    <string name="title_tab_guest">Invité</string>
    <string name="size_unity">ares</string>
    <string name="empty_field_error">Ce champ doit être rempli</string>
    <string name="passwords_dont_match_error">Vos mots de passes sont différents</string>
    <string name="wrong_date_error">Date ultérieure à la date actuelle</string>
    <string name="invalid_email_error">Adresse non valide</string>
    <string name="wrong_date_format_error">Veuillez respecter le format demandé</string>
    <string name="map_option">Afficher la carte</string>
    <string name="website_option">Site web</string>
    <string name="username_hint">Nom de compte</string>
    <string name="password_hint">Mot de passe</string>
    <string name="check_password_hint">Check mot de passe</string>
    <string name="email_hint">Email</string>
    <string name="birthdate_hint">JJ/MM/AAAA</string>
    <string name="birthdate_day_hint">JJ</string>
    <string name="birthdate_month_hint">MM</string>
    <string name="birthdate_year_hint">AAAA</string>
    <string name="register_button">S\'inscrire</string>
    <string name="reset_button">Réinitialiser</string>
    <string name="connection_button">Se connecter</string>
    <string name="title_popup_zoning_superficie">Superficie</string>
    <string name="title_popup_zoning_implantations">Implantations</string>
    <string name="title_popup_zoning_commune">Commune</string>
    <string name="title_popup_zoning_localite">Localité</string>
    <string name="listing_companies_option">Les entreprises</string>
    <string name="filter_name_option">Nom</string>
    <string name="filter_sector_option">Secteur</string>
    <string name="filter_city_option">Ville</string>
    <string name="filter_validation_button">Filtrer</string>
    <string name="is_logged_sharedpref_key">isLogged</string>
    <string name="error_token_unauthorized">Nom de compte / mot de passe erroné</string>
    <string name="error_token_bad_request">Informations manquantes</string>
    <string name="guest_message">Bienvenue sur notre application, si vous n\'avez pas de compte, vous pouvez continuer en tant qu\'invité, sinon vous pouvez vous connecter sur l\'onglet suivant</string>
    <string name="guest_login">Continuer en tant qu\'invité</string>
    <string name="no_connection_error">Une  connexion est nécessaire</string>
    <string name="mapQuest_apiKey">	W9jJpleg3DK5A2gnGfCQmfTtZF1MaAvH</string>
    <string name="no_url_provided">Pas de site web fourni</string>
    <string name="osm_credit">© OpenStreetMap contributors</string>
    <string name="location_permission_required">Vous devez donner l\'accès à votre position</string>
    <string name="write_permission_required">Vous devez donner l\'accès à vos données</string>
    <string name="error_loading_road">Erreur lors du chargement de la route - statut :</string>
    <string name="step">Étape</string>
    <string name="go_to">Aller vers</string>
    <string name="arrived">Arrivé</string>
    <string name="history">Les dernières entreprises que vous avez visité</string>
    <string name="sample_company_name">Nom de l\'entreprise</string>
    <string name="sample_company_sector">Secteur de l\'entreprise</string>
    <string name="sample_company_address">Adresse de l\'entreprise</string>
    <string name="malformed_url">URL fournie incorrecte</string>
    <string name="company_error">Une erreur est survenue lors de l\obtention des entreprises</string>
    <string name="json_error">Erreur lors de la lecture des données</string>
    <string name="token_getting_error">Erreur lors de l\'obtention du token</string>
    <string name="token_expired_error">Le token a expiré</string>
    <string name="zoning_error">Une erreur est survenue lors de l\'obtention des zonings</string>
    <string name="log_info_error">Informations manquantes ou incorrectes"</string>
    <string name="wrong_username_error">Utilisateur introuvable</string>
    <string name="task_cancelled">Tâche interrompue</string>
    <string name="sample_title">Démonstration d\'une fonction non implémentée</string>
</resources>
