<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="350dp"
    android:layout_height="400dp"
    android:layout_gravity="center"
    android:background="@drawable/background_popup"
    android:orientation="vertical"
    android:padding="5dp">

    <TextView
        android:id="@+id/close_popup_zoning"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:background="@drawable/cercle_background_exit"
        android:gravity="center"
        android:text="X"
        android:textColor="@color/white"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/zoningTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="10dp"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintEnd_toStartOf="@+id/close_popup_zoning"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="45dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.4"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0">


        <ImageView
            android:id="@+id/superficieIcon"
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:layout_marginStart="30dp"
            android:layout_marginTop="45dp"
            android:src="@drawable/ic_superficy"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/communeIcon"
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:layout_marginStart="30dp"
            android:layout_marginTop="15dp"
            android:src="@drawable/ic_place"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/superficieZoning" />

        <ImageView
            android:id="@+id/localiteIcon"
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:layout_marginStart="110dp"
            android:layout_marginTop="15dp"
            android:src="@drawable/ic_pin"
            app:layout_constraintStart_toEndOf="@+id/communeIcon"
            app:layout_constraintTop_toBottomOf="@+id/implentationsZoning" />

        <ImageView
            android:id="@+id/companyIcon"
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:layout_marginStart="110dp"
            android:layout_marginTop="45dp"
            android:src="@drawable/company_example"
            app:layout_constraintStart_toEndOf="@+id/superficieIcon"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/mapViewZoning"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginStart="50dp"
            android:layout_marginBottom="30dp"
            android:background="@drawable/cercle_background_option"
            android:src="@drawable/ic_map"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <ImageView
            android:id="@+id/listCompaniesPopup"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginStart="3dp"
            android:layout_marginEnd="3dp"
            android:layout_marginBottom="30dp"
            android:background="@drawable/cercle_background_option"
            android:src="@drawable/ic_list"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/webZoning"
            app:layout_constraintStart_toEndOf="@+id/mapViewZoning" />

        <ImageView
            android:id="@+id/webZoning"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginEnd="50dp"
            android:layout_marginBottom="30dp"
            android:background="@drawable/cercle_background_option"
            android:src="@drawable/ic_web"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <TextView
            android:id="@+id/superficieZoning"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:textAlignment="textStart"
            android:textColor="@color/white"
            android:textSize="12sp"
            app:layout_constraintLeft_toLeftOf="@id/superficieIcon"
            app:layout_constraintRight_toRightOf="@id/superficieIcon"
            app:layout_constraintTop_toBottomOf="@id/superficieIcon" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/map_option"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="10sp"
            app:layout_constraintLeft_toLeftOf="@id/mapViewZoning"
            app:layout_constraintRight_toRightOf="@id/mapViewZoning"
            app:layout_constraintTop_toBottomOf="@+id/mapViewZoning" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/listing_companies_option"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="10sp"
            app:layout_constraintLeft_toLeftOf="@+id/listCompaniesPopup"
            app:layout_constraintRight_toRightOf="@+id/listCompaniesPopup"
            app:layout_constraintTop_toBottomOf="@+id/listCompaniesPopup" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/website_option"
            android:textColor="@color/white"
            android:textSize="10sp"
            app:layout_constraintLeft_toLeftOf="@id/webZoning"
            app:layout_constraintRight_toRightOf="@id/webZoning"
            app:layout_constraintTop_toBottomOf="@id/webZoning" />

        <TextView
            android:id="@+id/superficieTitle"
            android:layout_width="wrap_content"
            android:layout_height="18dp"
            android:layout_marginStart="15dp"
            android:layout_marginTop="45dp"
            android:text="@string/title_popup_zoning_superficie"
            android:textColor="@color/white"
            app:layout_constraintStart_toEndOf="@+id/superficieIcon"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/communeZoning"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:textColor="@color/white"
            android:textSize="12sp"
            app:layout_constraintLeft_toLeftOf="@id/communeIcon"
            app:layout_constraintRight_toRightOf="@id/communeIcon"
            app:layout_constraintTop_toBottomOf="@id/communeIcon" />

        <TextView
            android:id="@+id/communeTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginTop="68dp"
            android:text="@string/title_popup_zoning_commune"
            android:textColor="@color/white"
            app:layout_constraintStart_toEndOf="@+id/communeIcon"
            app:layout_constraintTop_toBottomOf="@+id/superficieTitle" />

        <TextView
            android:id="@+id/implentationsTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginTop="45dp"
            android:text="@string/title_popup_zoning_implantations"
            android:textColor="@color/white"
            app:layout_constraintStart_toEndOf="@+id/companyIcon"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/implentationsZoning"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="nbImplent"
            android:textColor="@color/white"
            android:textSize="12sp"
            app:layout_constraintLeft_toLeftOf="@id/companyIcon"
            app:layout_constraintRight_toRightOf="@id/companyIcon"
            app:layout_constraintTop_toBottomOf="@id/companyIcon" />

        <TextView
            android:id="@+id/localiteZoning"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:textColor="@color/white"
            android:textSize="12sp"
            app:layout_constraintLeft_toLeftOf="@id/localiteIcon"
            app:layout_constraintRight_toRightOf="@id/localiteIcon"
            app:layout_constraintTop_toBottomOf="@id/localiteIcon" />

        <TextView
            android:id="@+id/localiteTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginTop="68dp"
            android:text="@string/title_popup_zoning_localite"
            android:textColor="@color/white"
            app:layout_constraintStart_toEndOf="@+id/localiteIcon"
            app:layout_constraintTop_toBottomOf="@+id/implentationsTitle" />
    </android.support.constraint.ConstraintLayout>

</android.support.constraint.ConstraintLayout>